--- a/code/index.html
+++ b/code/index.html
@@ -10,16 +10,17 @@
   </head>
   <body>
 
-
     <!-- This is the font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     
-     <!-- This is the header -->
-    <header>
+     <!-- This is the header-->
+    <div class="flex-container">
+    <header class="header">
       Ye Olde News
      </header>
+    </div>
 
    <!-- This is the logo and navbar -->
      <div class="topnav">
@@ -31,31 +32,31 @@
 
       <!-- The big news content -->
       <section class="big-news">
-        <h1>
-        big news
+      <h1>
+      big news
       </section>
       </h1>
   
       <!-- The other news  -->
       <section class="other-news">
-        <h2>
-        other news
+      <h2>
+      other news
       </section>
       </h2>
 
       <!-- This is the flexbox -->
     <div class="flex-container">
       <div>
-        This is my first news story
+      This is my first news story
       </div>
       <div>
-        This is my second news story
+      This is my second news story
       </div>
       <div>
-        This is my third news story
+      This is my third news story
       </div>
       <div>
-        <img src="newspic.jpg">
+      <img src="newspic.jpg">
       </div>
     </div> 
      
