last changes, the diffrence from yesterday to today is resposive ti firefox and a info text in the footer

--- a/code/index.html
+++ b/code/index.html
@@ -81,7 +81,7 @@
         <a href=""><img src="images/instagram-brands.svg" width="40px" alt=""></a>
         <a href=""><img src="images/twitter-brands.svg" width="40px" alt=""></a>
         <a href=""><img src="images/envelope-regular.svg" width="40px" alt=""></a>
-  
+        <p>Linnea Frisk, TECHNIGO Bootcamp 2022, Project 2</p>
       </footer>
 </body>
 </html>
