--- a/code/news_site_2/index.html
+++ b/code/news_site_2/index.html
@@ -12,6 +12,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&family=Outfit:wght@100;200;300&family=Source+Code+Pro:wght@200;300;400;500&display=swap" rel="stylesheet">
   <!-- FontAwesome Icons -->
   <script src="https://kit.fontawesome.com/819208677a.js" crossorigin="anonymous"></script>
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <!-- Link to Stylesheet -->
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -47,8 +52,8 @@
               <div class="head-content-2">
                 <h2>Cat Unable to Leave Yard</h2>
                 <h3>Jan. 17, 2022 | Michael Chang</h3>
-                <h4 class="read-more">Read more...</h4>
-                <p class="hidden-content">Article content</p>
+                <a href="" alt=""><h4 class="read-more">Read more...</h4></a>
+                <p class="hidden-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem pellentesque, suscipit elit eu, fermentum risus. Aliquam erat volutpat. Mauris auctor dolor neque, sit amet pulvinar velit maximus suscipit. Cras imperdiet, ante id rutrum faucibus, turpis tortor ullamcorper nibh, id condimentum dui mauris vulputate lacus. Maecenas a convallis lacus. Aenean sed arcu id ligula efficitur mattis. Nulla dignissim nisi in lectus consequat lobortis. Suspendisse potenti. Aliquam sit amet nunc diam.</p>
                 <footer>
                   <a href="" alt=""><i class="fas fa-hashtag"></i></a>
                   <a href="" alt=""><i class="fas fa-envelope"></i></a>
