added new img and styled them

--- a/code/index.html
+++ b/code/index.html
@@ -30,18 +30,25 @@
 
     <article>
     <section class="big-news">
-     <h1 style = font-size: 50px>The best adventures for 2022</h1>
+     <h1 style = font-size:50px>The best adventures for 2022</h1>
      <image class="big-news-img" src="images/tony-lee-i-unsplash.jpg"></image>
-     
+     <h2> more info about img</h2>
       <!-- The big news content -->
     </section>
-
+<hr>
     <section class="small-news">
 
-      <div class="news-1"></div>
-      <div class="news-2"></div>
-      <div class="news-3"></div>
-      <div class="news-4"></div>
+     <image class="news-small 1" src= "images/kiril-dobrev-8cQpL8kGqso-unsplash.jpg "></image>
+     <image class="news-small 2" src= "images/sergey-pesterev-mfX814jtyro-unsplash.jpg"></image>
+     <image class="news-small 3" src= "images/manuel-meurisse-sVITXInq_9k-unsplash.jpg"></image>
+     <image class="news-small 4" src="images/tatiana-zanon-VP2mjtJqWvY-unsplash.jpg"></image> 
+     <image class="news-small 5" src= "images/patrick-fore-YueS9MGF4Lo-unsplash.jpg"></image>
+     <image class="news-small 6" src= "images/fabio-comparelli-uq2E2V4LhCY-unsplash.jpg"></image>
+     <image class="news-small 7" src= "images/mathew-schwartz-s87bBFZviAU-unsplash.jpg"></image>
+     <image class="news-small 8" src= "images/steffen-wienberg-Z7FRDZBkLYo-unsplash.jpg"></image>
+
+
+     </section> 
 
     </article>  
 
