--- a/code/news_site_2/index.html
+++ b/code/news_site_2/index.html
@@ -32,7 +32,7 @@
     <a href="" alt="" class="navbar-link-1">Nothing Noteworthy</a>
     <a href="" alt="" class="navbar-link-2">Daily Events</a>
     <a href="../index.html" target="_blank" alt="News Site 1">
-    <i class="fas fa-circle fa-2x hidden-logo"></i>
+      <i class="fas fa-circle fa-2x hidden-logo"></i>
     </a>
     <a href="" alt="" class="navbar-link-3">Mildly Interesting</a>
     <a href="" alt="" class="navbar-link-4">Actually Boring</a>
@@ -52,8 +52,12 @@
               <div class="head-content-2">
                 <h2>Cat Unable to Leave Yard</h2>
                 <h3>Jan. 17, 2022 | Michael Chang</h3>
-                <a href="" alt=""><h4 class="read-more">Read more...</h4></a>
-                <p class="hidden-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem pellentesque, suscipit elit eu, fermentum risus. Aliquam erat volutpat. Mauris auctor dolor neque, sit amet pulvinar velit maximus suscipit. Cras imperdiet, ante id rutrum faucibus, turpis tortor ullamcorper nibh, id condimentum dui mauris vulputate lacus. Maecenas a convallis lacus. Aenean sed arcu id ligula efficitur mattis. Nulla dignissim nisi in lectus consequat lobortis. Suspendisse potenti. Aliquam sit amet nunc diam.</p>
+                <a href="" alt="">
+                  <h4 class="read-more">Read more...</h4>
+                </a>
+                <p class="hidden-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec lorem pellentesque, suscipit elit eu, fermentum risus. Aliquam erat volutpat. Mauris auctor dolor neque, sit amet pulvinar velit maximus
+                  suscipit. Cras imperdiet, ante id rutrum faucibus, turpis tortor ullamcorper nibh, id condimentum dui mauris vulputate lacus. Maecenas a convallis lacus. Aenean sed arcu id ligula efficitur mattis. Nulla dignissim nisi in lectus
+                  consequat lobortis. Suspendisse potenti. Aliquam sit amet nunc diam.</p>
                 <footer>
                   <a href="" alt=""><i class="fas fa-hashtag"></i></a>
                   <a href="" alt=""><i class="fas fa-envelope"></i></a>
