Added logo with news site name

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,8 @@
     <header>
       <!-- Logo and navbar -->
        <div class="logo">
-        <img src="https://i.pinimg.com/originals/6e/de/a8/6edea84dffc69d2c190c427be484143c.png" alt="raspberry-logo">
+        <img src="images/city-simple.svg" alt="raspberry-logo">
+        <p class="name">URBAN EATS</p>
       </div>
       <nav class="nav-links">
         <a href="#">Home</a>
@@ -26,6 +27,7 @@
       <img class="headline-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
       <div class="headline-content">
         <h1> Very. big. News.</h1>
+        <p class="date">January 21, 2022</p>
         <p>Lot's and lot's of text about the very big news.</p>
       </div>
     </section>
@@ -36,6 +38,7 @@
         <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
         <div class="article-text">
           <h2>Article title.</h2>
+          <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
       </div>
@@ -43,6 +46,7 @@
         <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
         <div class="article-text">
           <h2>Article title.</h2>
+          <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
       </div>
@@ -50,6 +54,7 @@
         <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
         <div class="article-text">
           <h2>Article title.</h2>
+          <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
       </div>
@@ -57,9 +62,25 @@
         <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
         <div class="article-text">
           <h2>Article title.</h2>
+          <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
       </div>
+      <div class="article">
+        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <div class="article-text">
+          <h2>Article title.</h2>
+          <p class="date">January 21, 2022</p>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        </div>
+      </div>
+      <div class="article">
+        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <div class="article-text">
+          <h2>Article title.</h2>
+          <p class="date">January 21, 2022</p>
+          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
+        </div>
       </div>
     </section>
 
@@ -67,6 +88,5 @@
     <footer>
       <p>Created by Arianna Allahyar.</p>
     </footer>
-
   </body>
 </html>
