--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <header>
@@ -15,10 +19,10 @@
         <p class="name">URBAN EATS</p>
       </div>
       <nav class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">Subscribe</a>
+        <a href="#">Eat</a>
+        <a href="#">Drink</a>
         <a href="#">Share</a>
-        <a href="#">Log In</a>
+        <a href="#">Subscribe</a>
       </nav>
     </header>
 
@@ -26,7 +30,7 @@
     <section class="big-news">
       <img class="headline-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
       <div class="headline-content">
-        <h1> Very. big. News.</h1>
+        <h1> Very. Big. News. Like a big fucking deal.</h1>
         <p class="date">January 21, 2022</p>
         <p>Lot's and lot's of text about the very big news.</p>
       </div>
