updated design and content. added credits and graphics as well as navbar and footer

--- a/code/index.html
+++ b/code/index.html
@@ -3,120 +3,126 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poodle Variety</title>
+    <title>TAILS MAGAZINE</title>
+    <link rel="icon" type="image/x-icon" href="pirate.jpg">
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Cormorant:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Cormorant:ital,wght@0,300;1,500&family=Spectral:wght@200&display=swap" rel="stylesheet">
   </head>
 <body>
 
+<!--A header with logo, name, navbar-->
 <header>
     <div class="logo">
      <img src="logo.png" alt="logo">
     </div>
     <div class="Name">
-    <h2>Poodle Variety</h2>  
+    <h2>TAILS</h2>  
     </div>
 <nav>
     <ul>
-      <li>About</li>
+      <li>Vision</li>
       <li>Contact</li>
-      <li>Blabla</li>
+      <li>Subscribe</li>
     </ul>
 </nav>
 </header>
 
 <main>
 
-<section class="big-news">
+<!--A section for the bigger home image and text-->
 
-  <div class="big-image">
-    <img src="big image.png" alt="classy poodle"/>
-  </div>
+<section class="home">
 
   <div class="big-text">
-    <h1>Poodle Variety</h1>
-    <h2>World leading Poodle Magazine</h2>
-    <h3>Since 1977</h3>
+    <h1>TAILS</h1>
+    <h2>Contemporary Art Magazine</h2>
+    <h3>Since 2018</h3>
+  </div>
+
+  <div class="big-image">
+    <img src="spiral.gif" alt="spiral"/>
   </div>
 
 </section>
 
+<!--A section for the regular news articles-->
+
 <section class="news">
 
 <div class="news-box">
-  <img src="jakob-samuel.jpeg" alt="not a poodle">
-  <h4>Lead singer of The Poodles NOT a poodle</h4>
-  <h5>According to source close to the band</h5>
+  <img src="Person.png" alt="Person at R1">
+  <h4>Helio by Emmeli Person</h4>
+  <h5>Exhibited at R1, Stockholm</h5>
 </div>
 
 <div class="news-box">
-  <img src="jakob-samuel.jpeg" alt="not a poodle">
-  <h4>Lead singer of The Poodles NOT a poodle</h4>
-  <h5>According to source close to the band</h5>
+  <img src="Anjou.jpg" alt="Cosmic Sneeze by Josefina Anjou">
+  <h4>Josefina Anjou</h4>
+  <h5>Cosmic Sneeze at Studio 21, Split</h5>
 </div>
 
 <div class="news-box">
-  <img src="jakob-samuel.jpeg" alt="not a poodle">
-  <h4>Lead singer of The Poodles NOT a poodle</h4>
-  <h5>According to source close to the band</h5>
+  <img src="Ullman.png" alt="Philip Ullman at HAUS">
+  <h4>Philip Ullman</h4>
+  <h5>Work in progress at HAUS, Vienna</h5>
 </div>
 
 <div class="news-box">
-  <img src="jakob-samuel.jpeg" alt="not a poodle">
-  <h4>Lead singer of The Poodles NOT a poodle</h4>
-  <h5>According to source close to the band</h5>
+  <img src="Hansson.png" alt="Hansson at To the Curious Proceed">
+  <h4>Jonne Hansson</h4>
+  <h5>Heavy Thoughts shown online</h5>
 </div>
 
 <div class="news-box">
-  <img src="jakob-samuel.jpeg" alt="not a poodle">
-  <h4>Lead singer of The Poodles NOT a poodle</h4>
-  <h5>According to source close to the band</h5>
+  <img src="Dream Island.png" alt="Dream Island at Art Lab Gnesta">
+  <h4>Launch of Dream Island</h4>
+  <h5>At Art Lab Gnesta, Gnesta</h5>
 </div>
 
 <div class="news-box">
-  <img src="jakob-samuel.jpeg" alt="not a poodle">
-  <h4>Lead singer of The Poodles NOT a poodle</h4>
-  <h5>According to source close to the band</h5>
+  <img src="Time Frame.png" alt="Time Frame at Kungstensgatan 21">
+  <h4>Graduation show Time Frame</h4>
+  <h5>Shown at Kungstensgatan 21, Stockholm</h5>
 </div>
 
 <div class="news-box">
-  <img src="jakob-samuel.jpeg" alt="not a poodle">
-  <h4>Lead singer of The Poodles NOT a poodle</h4>
-  <h5>According to source close to the band</h5>
+  <img src="Shift Motion.png" alt="Shift Motion at Midsommargården">
+  <h4>Group show Shift Motion</h4>
+  <h5>Shown at Midsommargården, Stockholm</h5>
 </div>
 
-<div class="news-box">
-  <img src="jakob-samuel.jpeg" alt="not a poodle">
-  <h4>Lead singer of The Poodles NOT a poodle</h4>
-  <h5>According to source close to the band</h5>
-</div>
+</section>
+
+<section class="big-text">
+
+  <div class="big-image">
+    <img src="emergence.png" alt="emergence"/>
+  </div>
+
+  <div class="big-text">
+    <h5>Credits: Photos by Jacqueline Neubauer & Tor Westerlund. Graphics by Manon Bachelier.</h5>
+  </div>
 
 </section>
 
 </main>
 
+<!--A footer navlinks, logo and Name-->
+
 <footer>
   <nav>
     <ul>
-     <li>About</li>
+     <li>Vision</li>
      <li>Contact</li>
-     <li>Blabla</li>
+     <li>Subscribe</li>
    </ul>
   </nav>
   <div class="Name">
-    <h2>Poodle Variety</h2>  
+    <h2>TAILS</h2>  
     </div>
-  <div class="logo">
+<div class="logo">
     <img src="logo.png" alt="logo">
    </div>
 </footer>
