--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
     <header>
       <!-- Logo and navbar -->
        <div class="logo">
-        <img src="images/city-simple.svg" alt="raspberry-logo">
+        <img src="images/city-simple.svg" alt="city logo">
         <p class="name">URBAN EATS</p>
       </div>
       <nav class="nav-links">
@@ -28,60 +28,63 @@
 
     <!-- The big-news content -->
     <section class="big-news">
-      <img class="headline-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+      <img class="headline-img" src="images/vitaminh.jpg" alt="hot sauce bottle">
       <div class="headline-content">
-        <h1> Very. Big. News. Like a big fucking deal.</h1>
+        <h1> Very. Big. News. A big fcking deal.</h1>
         <p class="date">January 21, 2022</p>
-        <p>Lot's and lot's of text about the very big news.</p>
+        <p>Have you taken your daily dose of vitamins? This bottle of goodness is occasionally referred to as the cure to the common cold. 
+          New on the shelves this week is this limited edition hot sauce, Vitamin H. 
+          As the label promises, a habanero a day keeps the doctor away. Dare to try? 
+          Your tacos will thank you. Get it before it's gone.</p>
       </div>
     </section>
       
     <!-- The other-news  -->
     <section class="other-news">
       <div class="article">
-        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <img class="article-img" src="images/reindeer.JPG" alt="reindeer skull">
         <div class="article-text">
-          <h2>Article title.</h2>
+          <h2>The ingredient you least expected</h2>
+          <p class="date">January 21, 2022</p>
+          <p>When you dine at the world's best restaurant, what do you expect to find on the menu? Surely reindeer penis is not your first guess. But, let's not forget, this is Noma.</p>
+        </div>
+      </div>
+      <div class="article">
+        <img class="article-img" src="images/anchor.jpg" alt="anchor brewing beer">
+        <div class="article-text">
+          <h2>Soak up the sun with these summery hops</h2>
           <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
       </div>
       <div class="article">
-        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <img class="article-img" src="images/salad.JPG" alt="salad with berries">
         <div class="article-text">
-          <h2>Article title.</h2>
+          <h2>Who knew salad could make you cry</h2>
           <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
       </div>
       <div class="article">
-        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <img class="article-img" src="images/onigiri.jpg" alt="onigiri">
         <div class="article-text">
-          <h2>Article title.</h2>
+          <h2>Pop-up onigiri shop: limited time only</h2>
           <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
       </div>
       <div class="article">
-        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <img class="article-img" src="images/tomatoes.jpg" alt="market tomatoes">
         <div class="article-text">
-          <h2>Article title.</h2>
+          <h2>Tips to find the tastiest market tomatoes</h2>
           <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
       </div>
       <div class="article">
-        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
+        <img class="article-img" src="images/hart.jpg" alt="hart bakery pastry">
         <div class="article-text">
-          <h2>Article title.</h2>
-          <p class="date">January 21, 2022</p>
-          <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
-        </div>
-      </div>
-      <div class="article">
-        <img class="article-img" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png">
-        <div class="article-text">
-          <h2>Article title.</h2>
+          <h2>Be still my beating Hart</h2>
           <p class="date">January 21, 2022</p>
           <p>Filler text about whaterever this article is about. Blah blah blah very interesting.</p>
         </div>
