friday session done, pretty much done

--- a/code/index.html
+++ b/code/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
 
-<!-- Write your comments here -->
-
   <body>
     <header>
+
+      <!-- Here starts the navigation --> 
+
       <nav>
-        <a href="startsidan"><p class="logo">Å.SIEURIN</p></a>
+        <a href="link to homepage"><p class="logo">Å.SIEURIN</p></a>
+
+        <!-- This is the menu for mobile -->
 
         <div class="hamburger-menu">
           <span class="menu-line"></span>
@@ -20,15 +23,21 @@
           <span class="menu-line"></span>
         </div>
 
+        <!-- This is the menu for tablet and desktop -->
+
         <div class="desktop-menu">
-          <p>ABOUT</p>
-          <p>ARTICLES</p>
-          <p>JOURNAL</p>
+          <a href="link to about page">about</a>
+          <a href="link to article page">article</a>
+          <a href="link to journal page">journal</a>
         </div>
       </nav>
 
+      <!-- End of the navigation -->
+
+      <!-- Here starts the hero -->
+
       <p class="centered-font">FEATURED ARTICLE</p>
-      <h1 class="hero-title">THERAPHY A LA GUCCI?</h1>
+      <h1>THERAPHY A LA GUCCI?</h1>
       <img
         class="hero-image"
         src="images/francesco-bianco-TVsgRyKJDc0-unsplash.jpg"
@@ -41,6 +50,8 @@
       </div>
     </header>
 
+    <!-- End of hero -->
+
     <main>
       <section class="home-intro">
         <h2>
@@ -49,16 +60,17 @@
         </h2>
       </section>
 
+      <!-- Here starts the first article section -->
+
       <section class="articles-container">
         <p class="article-header">Articles on the topic of:</p>
         <a class="article-header article-link" href="LÄNKSIDAN!"
-          >Creative Processes</a
-        >
+          >Creative Processes</a>
 
         <div class="row">
           <div class="article yellow">
             <h4>The ideal female archetype</h4>
-            <a href="LÄNKSIDAN">
+            <a href="link to article">
               <div class="article-image-wrapper">
                 <img
                   src="./images/sergey-vinogradov-wXrXdt2_YGs-unsplash.jpg"
@@ -72,29 +84,35 @@
 
           <div class="article blue">
             <h4>Invisible shapes</h4>
-            <div class="article-image-wrapper">
-              <img
-                src="./images/sergey-vinogradov-M2Cxa3USgW8-unsplash.jpg"
-                class="article-image"
-                alt="red man"
-              />
-            </div>
+            <a href="link to article">
+              <div class="article-image-wrapper">
+                <img
+                  src="./images/sergey-vinogradov-M2Cxa3USgW8-unsplash.jpg"
+                  class="article-image"
+                  alt="red man"
+                />
+              </div>
+            </a>
             <p>BY ÅSA SIEURIN</p>
           </div>
 
           <div class="article plum">
             <h4>The Balancing Act Of Fashion Business</h4>
-            <div class="article-image-wrapper">
-              <img
-                src="./images/sergey-vinogradov-Jt6Mof2cLR0-unsplash.jpg"
-                class="article-image"
-                alt="man on a rock"
-              />
-            </div>
-            <p>BY ÅSA SIEURIN</p>
+            <a href="link to article">
+              <div class="article-image-wrapper">
+                <img
+                  src="./images/sergey-vinogradov-Jt6Mof2cLR0-unsplash.jpg"
+                  class="article-image"
+                  alt="man on a rock"
+                />
+              </div>
+              <p>BY ÅSA SIEURIN</p>
+            </a>
           </div>
         </div>
       </section>
+
+      <!-- End of the first article section -->
 
       <section class="quote">
         <h3>
@@ -106,6 +124,8 @@
         <p class="centered-font author">SIMON SCHMIDT</p>
       </section>
 
+      <!-- Here starts the second article section -->
+
       <section class="articles-container">
         <p class="article-header">Articles on the topic of:</p>
         <a class="article-header article-link" href="LÄNKSIDAN!"
@@ -114,52 +134,59 @@
         <div class="row">
           <div class="article darkgreen">
             <h4>Embodying the fashion pose</h4>
-            <div class="article-image-wrapper">
-              <img
-                src="./images/sergey-vinogradov-TI-eDUB8P7U-unsplash.jpg"
-                class="article-image"
-                alt="sunset"
-              />
-            </div>
-            <p>BY ÅSA SIEURIN</p>
+            <a href="link to article">
+              <div class="article-image-wrapper">
+                <img
+                  src="./images/sergey-vinogradov-TI-eDUB8P7U-unsplash.jpg"
+                  class="article-image"
+                  alt="sunset"
+                />
+              </div>
+              <p>BY ÅSA SIEURIN</p>
+            </a>
           </div>
 
-          <div class="article blue" style="background-color: #65798e">
+          <div class="article darkblue">
             <h4>Not just a pretty face</h4>
-            <div class="article-image-wrapper">
-              <img
-                src="./images/sergey-vinogradov-ggsVIL5e9IA-unsplash.jpg"
-                class="article-image"
-                alt="flower girl"
-              />
-            </div>
-            <p>BY ÅSA SIEURIN</p>
+            <a href="link to article">
+              <div class="article-image-wrapper">
+                <img
+                  src="./images/sergey-vinogradov-ggsVIL5e9IA-unsplash.jpg"
+                  class="article-image"
+                  alt="flower girl"
+                />
+              </div>
+              <p>BY ÅSA SIEURIN</p>
+            </a>
           </div>
 
           <div class="article beige">
             <h4>The act of covering</h4>
-            <div class="article-image-wrapper">
-              <img
-                src="./images/sergey-vinogradov-s6pwJEecDUI-unsplash.jpg"
-                class="article-image"
-                alt="hidden man and a rose"
-              />
-            </div>
-            <p>BY ÅSA SIEURIN</p>
+            <a href="link to article">
+              <div class="article-image-wrapper">
+                <img
+                  src="./images/sergey-vinogradov-s6pwJEecDUI-unsplash.jpg"
+                  class="article-image"
+                  alt="hidden man and a rose"
+                />
+              </div>
+              <p>BY ÅSA SIEURIN</p>
+            </a>
           </div>
         </div>
       </section>
-      <h2 class="stay-in-touch"> STAY IN TOUCH</h2>
+
+      <!-- End of the second article section -->
+
+      <h2 class="stay-in-touch">STAY IN TOUCH</h2>
     </main>
 
     <footer>
-      <div class="footer-links">
-        <ul>
-          <li>facebook</li>
-          <li>instagram</li>
-          <li>copyright</li>
-        </ul>
-      </div>
+      <ul>
+        <a href="www.facebook.com"><li>facebook</li></a>
+        <a href="www.instagram"><li>instagram</li></a>
+        <a href="länktillkontaktsida"><li>contact</li></a>
+      </ul>
     </footer>
   </body>
 </html>
