added link of the site for the logo

--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@
         <label class="mobile-wrap-item1" for="checkbox">
           <i class="fa fa-bars menu-icon"></i>
         </label>
-        <a class="mobile-wrap-item2" href="https://www.google.com/"><img src="./other-images/logo-maple-news.svg" class="logo-mobile"
+        <a class="mobile-wrap-item2" href="https://maple-news.netlify.app"><img src="./other-images/logo-maple-news.svg" class="logo-mobile"
             alt="Logo Maple News"></a>
         <time class="mobile-wrap-item3">
           <!-- Show date and time
@@ -49,7 +49,7 @@
 
   <!-- START Header with logo, links and date only visible on desktop (min 1025px) -->
   <header class="desktop">
-    <a href="https://www.google.com/"><img src="./other-images/logo-maple-news.svg" alt="Logo Maple News"></a>
+    <a href="https://maple-news.netlify.app"><img src="./other-images/logo-maple-news.svg" alt="Logo Maple News"></a>
     <a class="navbar news" target="_blank" href="https://www.svt.se">News</a>
     <a class="navbar law" target="_blank" href="https://www.wsj.com/news/business/law-legal">Law & Business</a>
     <a class="navbar travel" target="_blank" href="https://edition.cnn.com/travel/">Travel</a>
