--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:wght@200&display=swap">
+    <link rel="images">
   </head>
   <body>
     <header>
@@ -80,7 +81,7 @@
       <a href="#">
         <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\francesco-la-corte-lICAVYUOBSw-unsplash.jpg"
         alt="hotel">
-        <h5>5 appealing hotels to add to visit</h5>
+        <h5>5 appealing hotels to visit</h5>
     </article>
     </section>
     
